# youtrack-mcp

./: .coveragerc  .dockerignore  .env.example  .env.test.example  .gitignore  .npmignore  .npmrc  DOCKER_TAGGING.md  Dockerfile  IMPLEMENTATION_STATUS.md  LICENSE  MANIFEST.in  PIPELINE_GUIDE.md  PR_13_COMMENT.md  README-FIXES.md  README.md  README.npm.md  REFACTORING_TRACKER.md  build-local.sh  cleanup_youtrack_containers.sh  close_pr.sh  commit.md  create_release.sh  docker-compose.yml  docker_pull_and_run.sh  main.py  package-lock.json  package.json  plan.md  pyproject.toml  pytest.ini  requirements.txt  run-docker.ps1  run-docker.sh  setup.py  todo.md
.github/workflows/: ci.yml  docker-build.yml  docker-build.yml.old  test-coverage.yml
automations/: DOCKER_TAGGING.md  GITHUB_PACKAGES_SETUP.md  README.md  RELEASE_INSTRUCTIONS.md  comment_on_pr.sh  create_release.sh  test_github_access.sh
examples/: user_tools_example.py
scripts/: build.js  check-docker-hub.sh  debug-docker-build.sh  fix-docker-auth.sh  setup-github-secrets.sh  setup_env.py  test-after-build.sh  test-before-build.sh  test-docker-login.sh  test-local.sh  test.js  version_bump.py
src/: index.js
tests/: README.md  __init__.py  conftest.py  test_server.py
tests/docker/: __init__.py  test_docker.sh  test_mcp_docker.py
tests/e2e/: __init__.py  test_real_api.py
tests/integration/: __init__.py  conftest.py  test_api_integration.py  test_user_tools.py
vscode-example/: mcp.json_example
youtrack_mcp/: __init__.py  config.py  mcp_server.py  mcp_wrappers.py  server.py  utils.py  version.py
(+67 files in other folders)
