[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "youtrack-mcp"
dynamic = ["version"]
description = "Model Context Protocol Server for JetBrains YouTrack"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.11.0",
    "requests>=2.32.3",
]

[project.scripts]
youtrack-mcp = "main:main"

[tool.setuptools.dynamic]
version = {attr = "youtrack_mcp.version.__version__"}
